@@ -68,9 +68,9 @@
 
     <td>
       <p>
-	Waarmee onderscheidt LilyPond zich van andere programma's? Waarom
-	is handgegraveerde muziek zo mooi? En hoe hebben
-	we dat gedaan?
+	Waarmee onderscheidt LilyPond zich van andere programma's?
+	Waarom is handgegraveerde muziek zo mooi? En hoe maken we dat
+	na?
       </p>
       <p class="teaser">
 	Dat, en meer in
